# rollo

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
benches/: Cargo.toml  event.rs  flat_buffers.rs  rand.rs  time.rs
doc/: event_processor.md  interval_timer.md
examples/: Cargo.toml  README.md  complex.rs  dos.rs  event.rs  flatbuffers.rs  hello_world.rs  interval.rs
rollo/: Cargo.toml  README.md
rollo-macros/: Cargo.toml
rollo-macros/src/: lib.rs
rollo/src/: lib.rs
rollo/src/error/: mod.rs
rollo/src/flat_buffers_helpers/: mod.rs
rollo/src/flatbuffers_helpers/: mod.rs
rollo/src/game/: event_processor.rs  game_loop.rs  game_time.rs  interval_mgr.rs  interval_timer.rs  mod.rs  rand.rs  rand_rng.rs
rollo/src/io/: mod.rs  read.rs
rollo/src/macros/: cfg.rs
rollo/src/math/: mod.rs
rollo/src/packet/: mod.rs
rollo/src/server/: dos_protection.rs  error.rs  mod.rs  tls.rs  world.rs  world_session.rs  world_socket.rs  world_socket_mgr.rs
rollo/tests/: event.rs  stress.rs  test_dos.rs  test_game_loop.rs  test_latency.rs  test_open_socket.rs  test_tls.rs  test_write.rs
