[package]
name = "benches"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
rollo = { path = "../rollo", features = ["full"] }
criterion = {version = "0.3"}
rayon = "1.5"

[[bench]]
name = "rand"
path = "rand.rs"
harness = false

[[bench]]
name = "flat_buffers"
path = "flat_buffers.rs"
harness = false

[[bench]]
name = "event"
path = "event.rs"
harness = false