[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
rollo = { path = "../rollo", features = ["game", "server", "macros"]}
async-trait = "0.1.50"
tracing-subscriber = "0.2.0"

[[example]]
name = "hello_world"
path = "hello_world.rs"

[[example]]
name = "complex"
path = "complex.rs"

[[example]]
name = "event"
path = "event.rs"

[[example]]
name = "interval"
path = "interval.rs"