[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
rollo = { path = "../rollo", features = ["game", "server"]}
async-trait = "0.1.50"
tracing-subscriber = "0.2.0"
parking_lot = "0.11"
once_cell = "1.8.0"

[[example]]
name = "hello_world"
path = "hello_world.rs"

[[example]]
name = "event"
path = "event.rs"

[[example]]
name = "interval"
path = "interval.rs"