[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
rollo = { path = "../rollo", features = ["full"]}
parking_lot = "0.11"
once_cell = "1.8.0"

[[example]]
name = "hello_world"
path = "hello_world.rs"

[[example]]
name = "event"
path = "event.rs"

[[example]]
name = "interval"
path = "interval.rs"

[[example]]
name = "dos"
path = "dos.rs"

[[example]]
name = "flatbuffers"
path = "flatbuffers.rs"