[package]
name = "rollo-macros"
version = "0.1.3"
edition = "2018"
license = "MIT"
description = "Macros for Rollo."
keywords = ["game","server", "network", "framework", "macros"]
repository = "https://github.com/netskillzgh/rollo/tree/master/rollo-macros"
authors = ["Netskillz <netskillz@protonmail.com>"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = {version = "1.0.74", features = ["full", "extra-traits"]}