[package]
name = "rollo"
version = "0.1.2"
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A multiplayer framework based on Rust 🦀."
keywords = ["game", "gamedev", "server", "network"]
repository = "https://github.com/netskillzgh/rollo"
authors = ["Netskillz <netskillz@protonmail.com>"]

[features]
default = ["server", "game"]
full = [
    "server",
    "flat_buffers_helpers",
    "game",
    "precise_time"
]

server = [
    "rustls",
    "tokio-rustls",
    "bytes",
    "async-trait",
    "rayon",
    "tokio",
    "game",
]

game = [
    "parking_lot",
    "multimap",
    "crossbeam",
    "rand",
    "lazy_static",
    "rand_pcg",
    "chrono"
]

precise_time = [
    "spin_sleep"
]

flat_buffers_helpers = [
    "flatbuffers",
    "crossbeam-queue"
]

[dependencies]
tracing = "0.1"
tokio = { version = "1.8.0", features = ["full"], optional = true }
async-trait = {version = "0.1.5", optional = true }
tokio-rustls = {version = "0.22.0", optional = true}
rustls = {version = "0.19.1", optional = true}
bytes = {version = "1.0.1", optional = true}
crossbeam = {version = "0.8.1", optional = true}
rayon = {version = "1.5", optional = true}
multimap = {version = "0.8.3", optional = true}
parking_lot = {version = "0.11.1", optional = true}
rand = {version = "0.8.4", optional = true}
lazy_static = {version = "1.4.0", optional = true }
rand_pcg = {version = "0.3.1", optional = true }
flatbuffers = {version = "2.0.0", optional = true }
crossbeam-queue = {version = "0.3.2", optional = true }
chrono = { version = "0.4", optional = true }
spin_sleep = { version = "1.0.0", optional = true } 

[dev-dependencies]
spin_sleep = { version = "1.0.0" } 