[package]
name = "rollo"
version = "0.2.5"
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A multiplayer framework based on Rust 🦀."
keywords = ["game", "gamedev", "server", "network", "multiplayer"]
categories = ["game-development", "games", "asynchronous", "concurrency"]
repository = "https://github.com/netskillzgh/rollo"
authors = ["Netskillz <netskillz@protonmail.com>"]

[features]
default = []
full = [
    "server",
    "flatbuffers_helpers",
    "game",
    "precise_time",
    "macros"
]

macros = [
    "rollo-macros"
]

server = [
    "rustls",
    "tokio-rustls",
    "bytes",
    "async-trait",
    "tokio",
    "game",
]

game = [
    "parking_lot",
    "multimap",
    "crossbeam",
    "rand",
    "rand_pcg",
    "chrono"
]

precise_time = [
    "spin_sleep"
]

flatbuffers_helpers = [
    "flatbuffers",
    "crossbeam-queue",
    "lazy_static",
]

[dependencies]
tokio = { version = "1.8.0", features = ["full"], optional = true }
async-trait = { version = "0.1.5", optional = true }
tokio-rustls = { version = "0.22.0", optional = true }
rustls = { version = "0.19.1", optional = true }
bytes = { version = "1.0.1", optional = true }
crossbeam = { version = "0.8.1", optional = true }
multimap = { version = "0.8.3", optional = true }
parking_lot = { version = "0.11.1", optional = true }
rand = { version = "0.8.4", optional = true }
lazy_static = { version = "1.4.0", optional = true }
rand_pcg = { version = "0.3.1", optional = true }
flatbuffers = { version = "2.0.0", optional = true }
crossbeam-queue = { version = "0.3.2", optional = true }
chrono = { version = "0.4", optional = true }
spin_sleep = { version = "1.0.0", optional = true }
rollo-macros = { version = "0.1.0", optional = true }
log = { version = "0.4.0", default-features = false }

[dev-dependencies]
spin_sleep = { version = "1.0.0" } 
serial_test = "0.5.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["full"]